--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bower": "^1.8.4",
     "cssmin": "^0.4.3",
-    "uglify-js": "^1.3.5",
+    "uglify-js": ">=2.6.0",
     "yuglify": "^2.0.0"
   }
 }
